src/CPP14Parser.js
// Generated from CPP14Parser.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import CPP14ParserListener from './CPP14ParserListener.js';
import CPP14ParserVisitor from './CPP14ParserVisitor.js';

import CPP14ParserBase from './CPP14ParserBase.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class CPP14Parser extends CPP14ParserBase {

    static grammarFileName = "CPP14Parser.g4";
    static literalNames = [ null, null, null, null, null, null, null, null, 
                            null, null, "'alignas'", "'alignof'", "'asm'", 
                            "'auto'", "'bool'", "'break'", "'case'", "'catch'", 
                            "'char'", "'char16_t'", "'char32_t'", "'class'", 
                            "'const'", "'constexpr'", "'const_cast'", "'continue'", 
                            "'decltype'", "'default'", "'delete'", "'do'", 
                            "'double'", "'dynamic_cast'", "'else'", "'enum'", 
                            "'explicit'", "'export'", "'extern'", "'false'", 
                            "'final'", "'float'", "'for'", "'friend'", "'goto'", 
                            "'if'", "'inline'", "'int'", "'long'", "'mutable'", 
                            "'namespace'", "'new'", "'noexcept'", "'nullptr'", 
                            "'operator'", "'override'", "'private'", "'protected'", 
                            "'public'", "'register'", "'reinterpret_cast'", 
                            "'return'", "'short'", "'signed'", "'sizeof'", 
                            "'static'", "'static_assert'", "'static_cast'", 
                            "'struct'", "'switch'", "'template'", "'this'", 
                            "'thread_local'", "'throw'", "'true'", "'try'", 
                            "'typedef'", "'typeid'", "'typename'", "'union'", 
                            "'unsigned'", "'using'", "'virtual'", "'void'", 
                            "'volatile'", "'wchar_t'", "'while'", "'('", 
                            "')'", "'['", "']'", "'{'", "'}'", "'+'", "'-'", 
                            "'*'", "'/'", "'%'", "'^'", "'&'", "'|'", "'~'", 
                            null, "'='", "'<'", "'>'", "'+='", "'-='", "'*='", 
                            "'/='", "'%='", "'^='", "'&='", "'|='", "'<<='", 
                            "'>>='", "'=='", "'!='", "'<='", "'>='", null, 
                            null, "'++'", "'--'", "','", "'->*'", "'->'", 
                            "'?'", "':'", "'::'", "';'", "'.'", "'.*'", 
                            "'...'" ];
    static symbolicNames = [ null, "IntLiteral", "CharLiteral", "FloatLiteral", 
                             "StringLiteral", "BooleanLiteral", "PointerLiteral", 
                             "UserDefinedLiteral", "MultiLineMacro", "Directive", 
                             "Alignas", "Alignof", "Asm", "Auto", "Bool", 
                             "Break", "Case", "Catch", "Char", "Char16", 
                             "Char32", "Class", "Const", "Constexpr", "Const_cast", 
                             "Continue", "Decltype", "Default", "Delete", 
                             "Do", "Double", "Dynamic_cast", "Else", "Enum", 
                             "Explicit", "Export", "Extern", "False_", "Final", 
                             "Float", "For", "Friend", "Goto", "If", "Inline", 
                             "Int", "Long", "Mutable", "Namespace", "New", 
                             "Noexcept", "Nullptr", "Operator", "Override", 
                             "Private", "Protected", "Public", "Register", 
                             "Reinterpret_cast", "Return", "Short", "Signed", 
                             "Sizeof", "Static", "Static_assert", "Static_cast", 
                             "Struct", "Switch", "Template", "This", "Thread_local", 
                             "Throw", "True_", "Try", "Typedef", "Typeid_", 
                             "Typename_", "Union", "Unsigned", "Using", 
                             "Virtual", "Void", "Volatile", "Wchar", "While", 
                             "LeftParen", "RightParen", "LeftBracket", "RightBracket", 
                             "LeftBrace", "RightBrace", "Plus", "Minus", 
                             "Star", "Div", "Mod", "Caret", "And", "Or", 
                             "Tilde", "Not", "Assign", "Less", "Greater", 
                             "PlusAssign", "MinusAssign", "StarAssign", 
                             "DivAssign", "ModAssign", "XorAssign", "AndAssign", 
                             "OrAssign", "LeftShiftAssign", "RightShiftAssign", 
                             "Equal", "NotEqual", "LessEqual", "GreaterEqual", 
                             "AndAnd", "OrOr", "PlusPlus", "MinusMinus", 
                             "Comma", "ArrowStar", "Arrow", "Question", 
                             "Colon", "Doublecolon", "Semi", "Dot", "DotStar", 
                             "Ellipsis", "Identifier", "DecimalLiteral", 
                             "OctalLiteral", "HexadecimalLiteral", "BinaryLiteral", 
                             "Intsuffix", "UserDefinedIntLiteral", "UserDefinedFloatLiteral", 
                             "UserDefinedStringLiteral", "UserDefinedCharLiteral", 
                             "Whitespace", "Newline", "BlockComment", "LineComment" ];
    static ruleNames = [ "translationUnit", "primaryExpr", "idExpr", "unqualifiedId", 
                         "qualifiedId", "nestedNameSpecifier", "lambdaExpr", 
                         "lambdaIntroducer", "lambdaCapture", "captureDefault", 
                         "captureList", "capture", "simpleCapture", "initcapture", 
                         "lambdaDeclarator", "postfixExpr", "typeIdOfTheTypeId", 
                         "exprList", "pseudoDestructorName", "unaryExpr", 
                         "unaryOperator", "newExpr_", "newPlacement", "newTypeId", 
                         "newDeclarator_", "noPointerNewDeclarator", "newInitializer_", 
                         "deleteExpr", "castExpr", "pointerMemberExpr", 
                         "multiplicativeExpr", "additiveExpr", "shiftExpr", 
                         "shiftOperator", "relationalExpr", "equalityExpr", 
                         "andExpr", "exclusiveOrExpr", "inclusiveOrExpr", 
                         "logicalAndExpr", "logicalOrExpr", "conditionalExpr", 
                         "assignmentExpr", "assignmentOperator", "expr", 
                         "constantExpr", "statement", "labeledStatement", 
                         "exprStatement", "compoundStatement", "statementSeq", 
                         "selectionStatement", "condition", "iterationStatement", 
                         "forInitStatement", "forRangeDeclaration", "forRangeInitializer", 
                         "jumpStatement", "declarationStatement", "declarationseq", 
                         "declaration", "blockDeclaration", "simpleDeclaration", 
                         "emptyDeclaration_", "declSpecifier", "declSpecifierSeq", 
                         "functionSpecifier", "typedefName", "typeSpecifier", 
                         "trailingTypeSpecifier", "typeSpecifierSeq", "trailingTypeSpecifierSeq", 
                         "simpleTypeLengthModifier", "simpleTypeSignednessModifier", 
                         "simpleTypeSpecifier", "theTypeName", "namespaceName", 
                         "originalNamespaceName", "namespaceDefinition", 
                         "usingDeclaration", "usingDirective", "initDeclaratorList", 
                         "initDeclarator", "declarator", "pointerDeclarator", 
                         "noPointerDeclarator", "parametersAndQualifiers", 
                         "trailingReturnType", "pointerOperator", "cvqualifierseq", 
                         "cvQualifier", "refqualifier", "declaratorid", 
                         "theTypeId", "abstractDeclarator", "pointerAbstractDeclarator", 
                         "noPointerAbstractDeclarator", "abstractPackDeclarator", 
                         "noPointerAbstractPackDeclarator", "parameterDeclarationClause", 
                         "parameterDeclarationList", "parameterDeclaration", 
                         "functionDefinition", "functionBody", "initializer", 
                         "braceOrEqualInitializer", "initializerClause", 
                         "initializerList", "bracedInitList", "className", 
                         "classSpecifier", "classHead", "classHeadName", 
                         "classVirtSpecifier", "classKey", "memberSpecification", 
                         "memberdeclaration", "memberDeclaratorList", "memberDeclarator", 
                         "pureSpecifier", "accessSpecifier", "constructorInitializer", 
                         "memInitializerList", "memInitializer", "meminitializerid", 
                         "theOperator", "literal" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = CPP14Parser.ruleNames;
        this.literalNames = CPP14Parser.literalNames;
        this.symbolicNames = CPP14Parser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 5:
    	    		return this.nestedNameSpecifier_sempred(localctx, predIndex);
    	case 15:
    	    		return this.postfixExpr_sempred(localctx, predIndex);
    	case 25:
    	    		return this.noPointerNewDeclarator_sempred(localctx, predIndex);
    	case 85:
    	    		return this.noPointerDeclarator_sempred(localctx, predIndex);
    	case 96:
    	    		return this.noPointerAbstractDeclarator_sempred(localctx, predIndex);
    	case 98:
    	    		return this.noPointerAbstractPackDeclarator_sempred(localctx, predIndex);
    	case 118:
    	    		return this.memberDeclarator_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    nestedNameSpecifier_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    postfixExpr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 1:
    			return this.precpred(this._ctx, 7);
    		case 2:
    			return this.precpred(this._ctx, 6);
    		case 3:
    			return this.precpred(this._ctx, 4);
    		case 4:
    			return this.precpred(this._ctx, 3);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    noPointerNewDeclarator_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 5:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    noPointerDeclarator_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 6:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    noPointerAbstractDeclarator_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 7:
    			return this.precpred(this._ctx, 4);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    noPointerAbstractPackDeclarator_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 8:
    			return this.precpred(this._ctx, 2);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    memberDeclarator_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 9:
    			return  this.IsPureSpecifierAllowed() ;
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	translationUnit() {
	    let localctx = new TranslationUnitContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, CPP14Parser.RULE_translationUnit);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 255;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(((((_la - 13)) & ~0x1f) === 0 && ((1 << (_la - 13)) & 2485258211) !== 0) || ((((_la - 45)) & ~0x1f) === 0 && ((1 << (_la - 45)) & 539066379) !== 0) || ((((_la - 78)) & ~0x1f) === 0 && ((1 << (_la - 78)) & 2654395) !== 0) || ((((_la - 118)) & ~0x1f) === 0 && ((1 << (_la - 118)) & 26113) !== 0)) {
	            this.state = 254;
	            this.declarationseq();
	        }

	        this.state = 257;
	        this.match(CPP14Parser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	primaryExpr() {
	    let localctx = new PrimaryExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, CPP14Parser.RULE_primaryExpr);
	    try {
	        this.state = 271;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	        case 2:
	        case 3:
	        case 4:
	        case 5:
	        case 6:
	        case 7:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 260; 
	            this._errHandler.sync(this);
	            var _alt = 1;
	            do {
	            	switch (_alt) {
	            	case 1:
	            		this.state = 259;
	            		this.literal();
	            		break;
	            	default:
	            		throw new antlr4.error.NoViableAltException(this);
	            	}
	            	this.state = 262; 
	            	this._errHandler.sync(this);
	            	_alt = this._interp.adaptivePredict(this._input,1, this._ctx);
	            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	            break;
	        case 69:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 264;
	            this.match(CPP14Parser.This);
	            break;
	        case 85:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 265;
	            this.match(CPP14Parser.LeftParen);
	            this.state = 266;
	            this.expr();
	            this.state = 267;
	            this.match(CPP14Parser.RightParen);
	            break;
	        case 99:
	        case 127:
	        case 132:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 269;
	            this.idExpr();
	            break;
	        case 87:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 270;
	            this.lambdaExpr();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	idExpr() {
	    let localctx = new IdExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, CPP14Parser.RULE_idExpr);
	    try {
	        this.state = 275;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 273;
	            this.unqualifiedId();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 274;
	            this.qualifiedId();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	unqualifiedId() {
	    let localctx = new UnqualifiedIdContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, CPP14Parser.RULE_unqualifiedId);
	    try {
	        this.state = 280;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 132:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 277;
	            this.match(CPP14Parser.Identifier);
	            break;
	        case 99:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 278;
	            this.match(CPP14Parser.Tilde);
	            this.state = 279;
	            this.className();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	qualifiedId() {
	    let localctx = new QualifiedIdContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, CPP14Parser.RULE_qualifiedId);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 282;
	        this.nestedNameSpecifier(0);
	        this.state = 283;
	        this.unqualifiedId();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	nestedNameSpecifier(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new NestedNameSpecifierContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 10;
	    this.enterRecursionRule(localctx, 10, CPP14Parser.RULE_nestedNameSpecifier, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 288;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        if(la_===1) {
	            this.state = 286;
	            this.theTypeName();

	        } else if(la_===2) {
	            this.state = 287;
	            this.namespaceName();

	        }
	        this.state = 290;
	        this.match(CPP14Parser.Doublecolon);
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 297;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,6,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new NestedNameSpecifierContext(this, _parentctx, _parentState);
	                this.pushNewRecursionContext(localctx, _startState, CPP14Parser.RULE_nestedNameSpecifier);
	                this.state = 292;
	                if (!( this.precpred(this._ctx, 1))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
	                }
	                this.state = 293;
	                this.match(CPP14Parser.Identifier);
	                this.state = 294;
	                this.match(CPP14Parser.Doublecolon); 
	            }
	            this.state = 299;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,6,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	lambdaExpr() {
	    let localctx = new LambdaExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, CPP14Parser.RULE_lambdaExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 300;
	        this.lambdaIntroducer();
	        this.state = 302;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===85) {
	            this.state = 301;
	            this.lambdaDeclarator();
	        }

	        this.state = 304;
	        this.compoundStatement();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	lambdaIntroducer() {
	    let localctx = new LambdaIntroducerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, CPP14Parser.RULE_lambdaIntroducer);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 306;
	        this.match(CPP14Parser.LeftBracket);
	        this.state = 308;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===69 || _la===97 || _la===101 || _la===132) {
	            this.state = 307;
	            this.lambdaCapture();
	        }

	        this.state = 310;
	        this.match(CPP14Parser.RightBracket);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


